<resources>
    <string name="app_name">HealthyRecipesEricW</string>
    <string name="textTitle">Bruschetta Recipe</string>
    <string name="txtName">Bruschetta Recipe</string>
    <string name="btnRecipe">VIEW RECIPE</string>
    <string name="txtIngredients">Ingredients</string>
    <string name="txtItem1">4 plum tomatoes</string>
    <string name="txtItem2">6 Basil leaves</string>
    <string name="txtItem3">3 garlic cloves, chopped</string>
    <string name="txtItem4">3 TB olive oil</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top French bread slices with mixture.</string>
    <string name="description">Recipe Image</string>
    <string name="txtDirections">Combine the ingredients and add salt to taste. Top French Bread Slices with mixture.</string>
</resources>
